CSS Build of website :D

--- a/recipes/Scrambledeggs.html
+++ b/recipes/Scrambledeggs.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css"/>
         <title>Scrambled Eggs</title>
     </head>
     <body>
@@ -16,10 +17,12 @@
         </ul>
         <h5>Steps</h5>
         <ol>
-            <li>beat the eggs.</li>
-            <li>preheat the pan.</li>
-            <li>place mixed egg yok in hot pan</li>
-            <li>mix up eggs until cooked,</li>
+            <div id="Steps">
+                <li>beat the eggs.</li>
+                <li>preheat the pan.</li>
+                <li>place mixed egg yok in hot pan</li>
+                <li>mix up eggs until cooked,</li>
+            </div>
         </ol>
 
         <a href="../index.html">Return to Homepage</a>
