--- a/recipes/pbnj.html
+++ b/recipes/pbnj.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css"/>
         <title>Peanut Butter and Jelly</title>
     </head>
     <body>
@@ -17,10 +18,12 @@
         </ul>
         <h5>Steps</h5>
         <ol>
-            <li>Get the bread, jam, peanut butter, knife, and plate out on the counter</li>
-            <li>Using the knife, get peanut butter and spread it on one slice of bread.</li>
-            <li>Using the knife again grab the other piece of bread and put jam on it.</li>
-            <li>Put the slices of bread together and there you go. You have a peanut butter and jelly sandwich!! Enjoy!!</li>
+            <div id="Steps">
+                <li>Get the bread, jam, peanut butter, knife, and plate out on the counter</li>
+                <li>Using the knife, get peanut butter and spread it on one slice of bread.</li>
+                <li>Using the knife again grab the other piece of bread and put jam on it.</li>
+                <li>Put the slices of bread together and there you go. You have a peanut butter and jelly sandwich!! Enjoy!!</li>
+            </div>
         </ol>
 
         <a href="../index.html">Return to Homepage</a>
